update packager.sh to zip release's output, renamed output's launcher.sh

--- a/OtherFiles/Resources/KfMonTemplate.ini
+++ b/OtherFiles/Resources/KfMonTemplate.ini
@@ -3,7 +3,7 @@
 [watch]
 ; Those next two keys are MANDATORY
 filename = /mnt/onboard/shortName.png			; Absolute path of the icon to watch for
-action = /mnt/onboard/.adds/shortName/launcher.sh	; Absolute path of the command to launch when the icon is opened
+action = /mnt/onboard/.adds/shortName/launcherName	; Absolute path of the command to launch when the icon is opened
 ; The following keys are NOT mandatory
 label = longName				; Label available for use by a GUI frontend
 hidden = 0						; Whether to hide this entry from a GUI frontend
