correcting typo in 'adjectifs en i' vocab page

--- a/OtherFiles/vocab/Adjectifs en i.cfg
+++ b/OtherFiles/vocab/Adjectifs en i.cfg
@@ -4,7 +4,7 @@
 # LearningScore value range [0;5], please note that the value is actually inversed from what is displayed in Obenkyobo
 # regex hell \[fontType=(?'fontType'[a-zA-Z]+)]\[jp=(?'jp'[^\]]+)]\[kanji=(?'kanji'[^\]]+)]\[trad=(?'trad'[a-zA-Z]+)]\[learningScore=(?'LS'[0-9])]
 
-[fontType=hiragana][jp=おおきい][kanji=大きい][trad=ｇrand(être)][learningScore=5]
+[fontType=hiragana][jp=おおきい][kanji=大きい][trad=grand(être)][learningScore=5]
 [fontType=hiragana][jp=ちいさい][kanji=小さい][trad=petit(être)][learningScore=5]
 [fontType=hiragana][jp=あたらしい][kanji=新しい][trad=nouveau(objet)][learningScore=5]
 [fontType=hiragana][jp=ふるい][kanji=古い][trad=vieux(objet)][learningScore=5]
