correcting omoshiroi traduction

--- a/OtherFiles/vocab/Adjectifs en i.cfg
+++ b/OtherFiles/vocab/Adjectifs en i.cfg
@@ -22,7 +22,7 @@
 [fontType=hiragana][jp=やすい][kanji=安い][trad=peu cher][learningScore=5]
 [fontType=hiragana][jp=たかい][kanji=高い][trad=haut][learningScore=5]
 [fontType=hiragana][jp=ひくい][kanji=低い][trad=bas][learningScore=5]
-[fontType=hiragana][jp=おもしろい][kanji=面白い][trad=amusant][learningScore=5]
+[fontType=hiragana][jp=おもしろい][kanji=面白い][trad=intéressant][learningScore=5]
 [fontType=hiragana][jp=つまらない][kanji=詰らない][trad=ennuyant][learningScore=5]
 [fontType=hiragana][jp=おいしい][kanji=美味しい][trad=bon][learningScore=5]
 [fontType=hiragana][jp=まずい][kanji=不味い][trad=mauvais][learningScore=5]
