vocab example page precision

--- a/OtherFiles/vocab/Adjectifs en i.cfg
+++ b/OtherFiles/vocab/Adjectifs en i.cfg
@@ -24,8 +24,8 @@
 [fontType=hiragana][jp=ひくい][kanji=低い][trad=bas][learningScore=5]
 [fontType=hiragana][jp=おもしろい][kanji=面白い][trad=intéressant][learningScore=5]
 [fontType=hiragana][jp=つまらない][kanji=詰らない][trad=ennuyant][learningScore=5]
-[fontType=hiragana][jp=おいしい][kanji=美味しい][trad=bon][learningScore=5]
-[fontType=hiragana][jp=まずい][kanji=不味い][trad=mauvais][learningScore=5]
+[fontType=hiragana][jp=おいしい][kanji=美味しい][trad=bon(goût)][learningScore=5]
+[fontType=hiragana][jp=まずい][kanji=不味い][trad=mauvais(goût)][learningScore=5]
 [fontType=hiragana][jp=とおい][kanji=遠い][trad=loin][learningScore=5]
 [fontType=hiragana][jp=ちかい][kanji=近い][trad=proche][learningScore=5]
 [fontType=hiragana][jp=ひろい][kanji=広い][trad=large][learningScore=5]
