more vocab sheets

--- a/OtherFiles/vocab/Adjectifs en i.cfg
+++ b/OtherFiles/vocab/Adjectifs en i.cfg
@@ -39,3 +39,4 @@
 [fontType=hiragana][jp=いそがしい][kanji=忙しい][trad=occupé][learningScore=5]
 [fontType=hiragana][jp=かわい][kanji=可愛い][trad=mignon][learningScore=5]
 [fontType=hiragana][jp=たのしい][kanji=楽しい][trad=amusant][learningScore=5]
+[fontType=hiragana][jp=きたない][kanji=][trad=sale/mal rangé][learningScore=5]
