fixing template line exemple not having kanji field

--- a/OtherFiles/vocab/Adjectifs en na.cfg
+++ b/OtherFiles/vocab/Adjectifs en na.cfg
@@ -1,5 +1,5 @@
 # Welcome to vocabulary .cfg files
-# Here's a template line [fontType=hiragana][jp=いぬ][trad=chien][learningScore=5]
+# Here's a template line [fontType=hiragana][jp=いぬ][kanji=犬][trad=chien][learningScore=5]
 # fontType possible values : hiragana/katakana/kanji , will determine what fonts will be used in Obenkyobo to display this entry
 # LearningScore value range [0;5], please note that the value is actually inversed from what is displayed in Obenkyobo
 
