--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Src/Libs/qt5-kobo-platform-plugin"]
 	path = Src/Libs/qt5-kobo-platform-plugin
-	url = git@github.com:Aryetis/qt5-kobo-platform-plugin.git
+	url = https://github.com/Aryetis/qt5-kobo-platform-plugin
