--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "Src/Libs/qt5-kobo-platform-plugin"]
 	path = Src/Libs/qt5-kobo-platform-plugin
 	url = https://github.com/Aryetis/qt5-kobo-platform-plugin
-	branch = master
+	branch = Obenkyobo
